Full assert message on log

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ java {
 
 test {
     systemProperty 'com.github.simkuenzi.webplay.testfs', "${project.buildDir}/testfs"
+    testLogging {
+        exceptionFormat "full"
+    }
 }
 
 
