--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,12 @@ repositories {
 dependencies {
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
-    testImplementation group: 'xmlunit', name: 'xmlunit', version: '1.6'
+    testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.7.0'
+    testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version: '2.7.0'
+    testImplementation group: 'org.xmlunit', name: 'xmlunit-placeholders', version: '2.7.0'
+    testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+    testImplementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.0'
+    testImplementation group: 'javax.activation', name: 'activation', version: '1.1.1'
     testImplementation group: 'io.javalin', name: 'javalin', version: '3.9.1'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
 }
