--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'maven-publish'
     id 'signing'
     id 'net.researchgate.release' version '2.8.1'
@@ -34,13 +35,20 @@ java {
     targetCompatibility JavaVersion.VERSION_11
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
 test {
+    finalizedBy jacocoTestReport
     systemProperty 'com.github.simkuenzi.webplay.testfs', "${project.buildDir}/testfs"
     testLogging {
         exceptionFormat "full"
     }
 }
-
 
 nexusStaging {
     username = project.hasProperty('mavenUser') ? mavenUser : ''
